--- a/css/css.css
+++ b/css/css.css
@@ -20,7 +20,8 @@ ul{
 	background-color: #ececec;
 }
 li{
-	
+	font-family: sans-serif;
+	font-size: 20px;
 	margin:0px;
 	padding: 45px;
 	padding-left: 20%;
@@ -53,9 +54,9 @@ header{
 nav{
 
 		width: 100%;
-		height: 400px;
+		height: 500px;
 		position:absolute;
-		transform: translate(0,-400px);
+		transform: translate(0,-500px);
 		transition: transform 0.5s ease;
 		z-index: 100;
 		background-color: #f6f6f6;
