--- a/css/css.css
+++ b/css/css.css
@@ -23,8 +23,8 @@ li{
 	font-family: sans-serif;
 	font-size: 4vw;
 	margin:0px;
-	padding: 45px;
-	padding-left: 20%;
+	padding: 5vw;
+	padding-left: 15vw;
 	border-bottom: 1px solid #fefefe;
 	text-align: left;
 
@@ -54,9 +54,9 @@ header{
 nav{
 
 		width: 100%;
-		height: 600px;
+		height: 56vw;
 		position:absolute;
-		transform: translate(0,-600px);
+		transform: translate(0,-56vw);
 		transition: transform 0.5s ease;
 		z-index: 100;
 		background-color: #f6f6f6;
@@ -66,7 +66,7 @@ nav.open{
 	transform: translate(0,0);
 }
 main.down{
-	transform: translate(0,400px);
+	transform: translate(0,56vw);
 }
 .title{
 	
