--- a/css/css.css
+++ b/css/css.css
@@ -24,7 +24,7 @@ li{
 	font-size: 4vw;
 	margin:0px;
 	padding: 5vw;
-	padding-left: 15vw;
+	padding-left: 10vw;
 	border-bottom: 1px solid #fefefe;
 	text-align: left;
 
@@ -54,9 +54,9 @@ header{
 nav{
 
 		width: 100%;
-		height: 57vw;
+		height: 58vw;
 		position:absolute;
-		transform: translate(0,-57vw);
+		transform: translate(0,-58vw);
 		transition: transform 0.5s ease;
 		z-index: 100;
 		background-color: #f6f6f6;
@@ -66,21 +66,22 @@ nav.open{
 	transform: translate(0,0);
 }
 main.down{
-	transform: translate(0,57vw);
+	transform: translate(0,58vw);
 }
 .title{
 	
-	padding-top: 50px;
-	padding-bottom: 48px;
-	padding-left: 15px;
+	padding-top: 5vw;
+	padding-bottom: 5px;
+	padding-left: 5vw;
 	
 }
 
 .menu{
 	
-	padding-top: 55px;
-	padding-bottom: 40px;
-	padding-right: 15px;
+	padding-top: 5vw;
+	padding-bottom: 5px;
+	padding-left: 5vw;
+	
 	
 }
 #menu_icon{
