--- a/css/css.css
+++ b/css/css.css
@@ -69,7 +69,7 @@ main.down{
 	transform: translate(0,58vw);
 }
 .title{
-	
+	font-size: 5vw;
 	padding-top: 5vw;
 	padding-bottom: 5px;
 	padding-left: 5vw;
@@ -86,6 +86,7 @@ main.down{
 }
 #menu_icon{
 	float: right;
+	font-size: 4vw;
 	
 }
 #menu_icon:hover{
