--- a/css/css.css
+++ b/css/css.css
@@ -71,7 +71,7 @@ main.down{
 .title{
 	font-size: 8vw;
 	padding-top: 5vw;
-	padding-bottom: 3px;
+	padding-bottom: 3vw;
 	padding-left: 5vw;
 	
 }
@@ -79,7 +79,7 @@ main.down{
 .menu{
 	
 	padding-top: 8vw;
-	padding-bottom: 8px;
+	padding-bottom: 8vw;
 	padding-right: 5vw;
 	
 	
