--- a/css/css.css
+++ b/css/css.css
@@ -53,20 +53,20 @@ header{
 }
 nav{
 
-		width: 100%;
-		height: 58vw;
+		width: 67vw;
+		height: 100%;
 		position:absolute;
-		transform: translate(0,-58vw);
+		transform: translate(100vw,0);
 		transition: transform 0.5s ease;
 		z-index: 100;
 		background-color: #f6f6f6;
 	}
 nav.open{
 
-	transform: translate(0,0);
+	transform: translate(33vw,0);
 }
 main.down{
-	transform: translate(0,58vw);
+	transform: translate(-67vw,0);
 }
 .title{
 	font-size: 6vw;
