--- a/css/css.css
+++ b/css/css.css
@@ -75,13 +75,50 @@ main.left{
 	transform: translate(-67vw,0);
 }
 .title{
-	font-size: 5vw;
+	font-size: 2vw;
 	padding-top: 2vw;
 	padding-bottom: 2vw;
 	padding-left: 5vw;
 	
 }
+.btn{
+	padding-top: 2vw;
+	padding-bottom: 2vw;
+	padding-left: 5vw;
+}
+ .btn {
+ border-radius: 8px;
+  font-family: sans-serif;
+  color: #000000;
+  font-size: 15px;
+   width:120px;
+   height:40px;
+   border: 1px solid #0070A8;
+  background:#ffffff ;
+  text-decoration: none;
+}
 
+.btn:hover {
+
+  background: #c1c1c1;
+  text-decoration: none;
+}
+
+.btn:active {
+background: #a1a1a1;
+   width:118px;
+   height:38px;
+border-radius: 8px;
+ border: 0;
+
+}
+
+.btn:visited {
+ border: 0;
+  outline: none;
+  border: 0;
+
+}
 .menu{
 	
 	padding-top: 2vw;
