--- a/css/css.css
+++ b/css/css.css
@@ -82,42 +82,53 @@ main.left{
 	
 }
 .btn{
-	padding-top: 2vw;
-	padding-bottom: 2vw;
-	padding-left: 5vw;
+	
 }
  .btn {
- border-radius: 8px;
-  font-family: sans-serif;
-  color: #000000;
-  font-size: 15px;
-   width:120px;
-   height:40px;
-   border: 1px solid #0070A8;
-  background:#ffffff ;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: normal;
+  text-align: center;
+  vertical-align: middle;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  white-space: nowrap;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  border-radius: 4px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+.btn:hover,
+.btn:focus,
+.btn.focus {
+	z-index:1
+  color: #333333;
   text-decoration: none;
 }
-
-.btn:hover {
-
-  background: #c1c1c1;
-  text-decoration: none;
-}
-
-.btn:active {
-background: #a1a1a1;
-   width:118px;
-   height:38px;
-border-radius: 8px;
- border: 0;
-
-}
-
-.btn:visited {
- border: 0;
-  outline: none;
-  border: 0;
-
+.btn:active,
+.btn.active {
+	z-index:1;
+  outline: 0;
+  background-image: none;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 .menu{
 	
