--- a/css/css.css
+++ b/css/css.css
@@ -130,6 +130,11 @@ main.left{
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
+.btn-default {
+  color: #333333;
+  background-color: #ffffff;
+  border-color: #cccccc;
+}
 .menu{
 	
 	padding-top: 2vw;
@@ -148,15 +153,6 @@ main.left{
 }
 
 
-* {
-  margin: 0;
-  padding: 0; 
-}
-
-* {
-  margin: 0;
-  padding: 0; 
-}
 
 /* Icon 1 */
 
