--- a/css/css.css
+++ b/css/css.css
@@ -77,6 +77,9 @@ main.left{
 .girl_img{
 	width: 60px;
 	height: auto;
+	padding-top: 2vw;
+	padding-bottom: 2vw;
+	padding-right: 5vw;
 }
 .btn{
 	
@@ -132,6 +135,9 @@ main.left{
   background-color: #ffffff;
   border-color: #cccccc;
   width: 80px;
+  padding-top: 2vw;
+	padding-bottom: 2vw;
+	
 }
 .menu{
 	
