--- a/css/css.css
+++ b/css/css.css
@@ -89,7 +89,7 @@ main.left{
 }
 .col-btn{
 	
-	padding-top: 4vw;
+	padding-top: 3vw;
 	padding-bottom: 3vw;
 	
 }
@@ -105,8 +105,8 @@ main.left{
   background-image: none;
   border: 1px solid transparent;
   white-space: nowrap;
-  padding: 12px 12px;
-  font-size: 24px;
+  padding: 20px 12px;
+  font-size: 30px;
   line-height: 1.42857143;
   border-radius: 4px;
   -webkit-user-select: none;
@@ -143,7 +143,7 @@ main.left{
   color: #333333;
   background-color: #ffffff;
   border-color: #cccccc;
-  width: 180px;
+  width: 180px auto;
   
 	
 }
