--- a/css/css.css
+++ b/css/css.css
@@ -105,8 +105,9 @@ main.left{
   background-image: none;
   border: 1px solid transparent;
   white-space: nowrap;
-  padding: 20px 12px;
-  font-size: 30px;
+  padding: 20px 20px;
+  font-size: 35px;
+  font-family: sans-serif;
   line-height: 1.42857143;
   border-radius: 4px;
   -webkit-user-select: none;
