--- a/css/css.css
+++ b/css/css.css
@@ -3,8 +3,8 @@
 	}
 
 	@font-face {
-    font-family: opensans;
-    src: url(font/OpenSans-Regular.ttf);
+    font-family: "opensans";
+    src: url(font/"opensans"-Regular.ttf);
 }
 
 html, body, main{
@@ -29,7 +29,7 @@ ul{
 	background-color: #ececec;
 }
 li{
-	font-family: opensans;
+	font-family: "opensans";
 	font-size: 5vw;
 	margin:0px;
 	padding: 7vw;
@@ -114,7 +114,7 @@ main.left{
   white-space: nowrap;
   padding: 20px 50px;
   font-size: 35px;
-  font-family: opensans;
+  font-family: "opensans";
   line-height: 1.42857143;
   border-radius: 8px;
   -webkit-user-select: none;
