--- a/css/css.css
+++ b/css/css.css
@@ -4,7 +4,7 @@
 
 	@font-face {
     font-family: "opensans";
-    src: url(font/"opensans"-Regular.ttf);
+    src: url(font/opensans-Regular.ttf);
 }
 
 html, body, main{
