--- a/css/css.css
+++ b/css/css.css
@@ -3,8 +3,7 @@
 	}
 
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300);
-
+@import url(https://fonts.googleapis.com/css?family=Lato);
 
 html, body, main{
 	margin: 0px;
@@ -13,7 +12,7 @@ html, body, main{
 	width: 100%;
 	background-color: #f6f6f6;
 
-  font-family: 'Open Sans', sans-serif;
+font-family: 'Lato', sans-serif;
 
 }
 
