--- a/css/css.css
+++ b/css/css.css
@@ -127,6 +127,7 @@ main.left{
   display: block;
   margin: auto;	
 }
+/*
 .btn:focus,
 .btn:active:focus,
 .btn.active:focus,
@@ -137,24 +138,26 @@ main.left{
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
 }
+
 .btn:hover,
 .btn:focus,
 .btn.focus {
 	z-index:1
   color: #333333;
   text-decoration: none;
-}
+}*/
 .btn:active,
 .btn.active {
-	z-index:1;
+	/*z-index:1;
   outline: 0;
   background-image: none;
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  */
+  background-color: red;
+
 }
-.btn-default {
-  
-}
+
 .menu{
 	
 	padding-top: 5vw;
