--- a/css/css.css
+++ b/css/css.css
@@ -27,7 +27,6 @@ ul{
 	padding: 0px;
 	margin: 0px;
 	background-color: #ececec;
-  background-color: red;
 }
 li{
 	color: #333333;
@@ -155,7 +154,10 @@ main.left{
   -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   */
-  background-color: red;
+
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+  background-color: #cccccc;
 
 }
 
