--- a/css/css.css
+++ b/css/css.css
@@ -3,7 +3,10 @@
 	}
 
 
-@import url(https://fonts.googleapis.com/css?family=Lato);
+@font-face {
+    font-family: open_sans;
+    src: url(font/OpenSans-Regular.ttf);
+}
 
 html, body, main{
 	margin: 0px;
@@ -11,8 +14,9 @@ html, body, main{
 	height: 100%;
 	width: 100%;
 	background-color: #f6f6f6;
+  font-family: open_sans;
 
-font-family: 'Lato', sans-serif;
+
 
 }
 
