--- a/css/css.css
+++ b/css/css.css
@@ -3,10 +3,15 @@
 	}
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 @font-face {
-    font-family: open_sans;
-    src: url(font/OpenSans-Regular.ttf);
+    font-family: 'open_sans';
+    src: url('font/OpenSans-Regular.ttf') format('truetype'),
+    font-weight: normal;
+    font-style: normal;
 }
+
+
 
 html, body, main{
 	margin: 0px;
