--- a/css/css.css
+++ b/css/css.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: 'open_sans';
-    src: url('font/OpenSans-Regular.ttf') format('truetype'),
+    src: url('font/OpenSans-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
