--- a/css/css.css
+++ b/css/css.css
@@ -10,9 +10,7 @@ html, body, main{
 	height: 100%;
 	width: 100%;
 	background-color: #f6f6f6;
-  font-family: 'Open Sans';
-
-
+  font-family: 'Open Sans', serif;
 
 }
 
@@ -83,9 +81,7 @@ nav.open{
 
 	transform: translate(33vw,0);
 }
-main.left{
-	transform: translate(-67vw,0);
-}
+
 .col-girl{
 
 	padding-top: 4vw;
