--- a/css/css.css
+++ b/css/css.css
@@ -56,7 +56,7 @@ li:hover{
 
 header{
 	background-color: #f6f6f6;
-  background-color: rgba(246,246,246,.95);
+  background-color: rgba(246,246,246,.93);
 
 	display: flex;
 	flex-wrap: wrap;
@@ -288,7 +288,7 @@ main.left{
   margin: auto;
 }
 #banner{
-  position: absolute;
+  position: ;
 }
 
 .test{
