--- a/css/css.css
+++ b/css/css.css
@@ -299,14 +299,16 @@ main.left{
   
   z-index: 100;
   font-size: 50px;
-
+  display: block;
+  width: 10%;
   margin: auto;
 }
 #banner_text2{
   position: absolute;
   z-index: 100;
   font-size: 50px;
- 
+  display: block;
+  width: 10%;
   margin: auto;
 }
 
