--- a/css/css.css
+++ b/css/css.css
@@ -301,8 +301,8 @@ main.left{
   display: block;
   width: 10%;
   margin: auto;
-  border: 2px solid red;
-  background-color: rgba(255,0,0,.6);
+  border: 2px solid green;
+  background-color: rgba(0,255,0,.6);
 }
 #banner_text2{
   position: absolute;
@@ -316,10 +316,11 @@ main.left{
 }
 
 #banner{
+  width: 100%;
   background-image: url("img/banner.jpg");
   background-size: 100% auto;
   text-align: center;
-  border: 2px solid red;
+  border: 5px solid red;
   display: flex;
 }
 
