--- a/css/css.css
+++ b/css/css.css
@@ -318,7 +318,7 @@ main.left{
 #banner{
   width: 100%;
   background-image: url("img/banner.jpg");
-  background-size: 100% auto;
+  background-size: cover;
   text-align: center;
   border: 5px solid red;
   display: flex;
