--- a/css/css.css
+++ b/css/css.css
@@ -317,7 +317,7 @@ main.left{
 
 #banner{
   width: 100%;
-  background-image: url("./img/banner.jpg");
+  background-image: url("../img/banner.jpg");
   background-size: 100% auto;
   text-align: center;
   border: 5px solid red;
