--- a/css/css.css
+++ b/css/css.css
@@ -55,15 +55,15 @@ li:hover{
 }
 
 header{
-	background-color: #f6f6f6;
   background-color: rgba(246,246,246,.93);
-
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
 	position: fixed;
 	border: 1px solid #cccccc;
   z-index: 100;
+  justify-content: center;
+  align-items: center;
 }
 
 nav{
@@ -88,10 +88,11 @@ main.left{
 
 .col-girl{
 
-	padding-top: 4vw;
+	/*padding-top: 4vw;
 	padding-bottom: 3vw;
 	padding-left: 5vw;
-	
+	*/
+  border: 1px solid red;
 	
 }
 .girl_img{
@@ -100,10 +101,11 @@ main.left{
 	
 }
 .col-btn{
-	
+	/*
 	padding-top: 3vw;
 	padding-bottom: 3vw;
-	
+	*/
+  border: 1px solid red;
 }
  .btn {
 
@@ -168,17 +170,15 @@ main.left{
 }
 
 .menu{
-	
+	/*
 	padding-top: 5vw;
 	padding-bottom: 3vw;
 	padding-right: 5vw;
-	
-	
+	*/
+	border: 1px solid red;
 }
 #menu_icon{
 	float: right;
-	
-	
 }
 #menu_icon:hover{
 	cursor: pointer;
