--- a/css/css.css
+++ b/css/css.css
@@ -63,8 +63,8 @@ header{
 	border: 1px solid #cccccc;
   z-index: 100;
   
-  
-  justify-content: center;
+  align-items: center;
+  justify-content: space-around;
 
   height: 20%;
 }
