--- a/css/css.css
+++ b/css/css.css
@@ -64,7 +64,7 @@ header{
   z-index: 100;
   
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
 
   height: 10%;
 }
