--- a/css/css.css
+++ b/css/css.css
@@ -77,7 +77,8 @@ nav{
 		width: 67vw;
 		height: 100%;
 		position:absolute;
-		transform: translate(33vw,0);
+		left: 33vw;
+    right: 0;
 		transition: transform 0.5s ease;
 		
 		background-color: #ececec;
@@ -130,7 +131,7 @@ main.left{
   border: 1px solid transparent;
   white-space: nowrap;
   padding: 6px 22px;
-  font-size: 18px;
+  font-size: 17px;
   
   line-height: 1.42857143;
   border-radius: 8px;
