--- a/css/css.css
+++ b/css/css.css
@@ -62,7 +62,7 @@ header{
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
-	position: fixed;
+	position: relative;
 	border: 1px solid #cccccc;
   z-index: 100;
   
