--- a/css/css.css
+++ b/css/css.css
@@ -36,7 +36,7 @@ li{
 	padding-left: 10vw;
 	border-bottom: 1px solid #fefefe;
 	text-align: left;
-  height: 25%;
+  height: 10vh;
   align-items: center;
 }
 li:hover{
