--- a/css/css.css
+++ b/css/css.css
@@ -223,7 +223,7 @@ main.left{
   position: absolute;
   height: 3px;
   width: 100%;
-  background: red;
+  background: #333333;
   border-radius: 3px;
   opacity: 1;
   left: 0;
@@ -275,7 +275,7 @@ main.left{
   transform: rotate(45deg);
   top: 0px;
   left: 2px;
-
+  background: #cccccc;
 }
 
 #menu_icon.open span:nth-child(2) {
@@ -290,6 +290,7 @@ main.left{
   transform: rotate(-45deg);
   top: 17.5px;
   left: 2px;
+  background: #cccccc;
 }
 
 
