--- a/css/css.css
+++ b/css/css.css
@@ -16,13 +16,19 @@ html, body, main{
   overflow-x:hidden;
 }
 
+body{
+  position: relative;
+}
+
 
 
 main{
-	position:absolute;
+	position: fixed;
 	transition: transform 0.5s ease;
   z-index:5;
+
 }
+
 ul{
 	list-style-type: none;
 	padding: 0px;
@@ -83,15 +89,20 @@ nav{
 
 		width: 67vw;
 		height: 100%;
-		position:fixed;
-		left: 33vw;
-    right: 0;
+		position:absolute;
+		right: -67vw;
+    
 		transition: transform 0.5s ease;
 		
 		background-color: #ececec;
 
 
 	}
+
+nav.left{
+
+transform: translate(-67vw,0);
+}
 
 main.left{
 
