--- a/css/css.css
+++ b/css/css.css
@@ -21,14 +21,14 @@ body{
 }
 
 
-
+/*
 main{
 	position: fixed;
 	transition: transform 0.5s ease;
   z-index:5;
 
 }
-
+*/
 ul{
 	list-style-type: none;
 	padding: 0px;
@@ -80,7 +80,7 @@ header{
 
   height: 10%;
 
-  
+  transition: transform 0.5s ease;
 
 }
 
@@ -89,7 +89,7 @@ nav{
 
 		width: 67vw;
 		height: 100%;
-		position:absolute;
+		position:fixed;
 		right: -67vw;
     
 		transition: transform 0.5s ease;
@@ -99,15 +99,20 @@ nav{
 
 	}
 
-nav.left{
+
+#content{
+  position: absolute;
+  top: 10%;
+  transition: transform 0.5s ease;
+  background-color: #f6f6f6;
+}
+
+
+.left{
 
 transform: translate(-67vw,0);
 }
 
-main.left{
-
-transform: translate(-67vw,0);
-}
 
 
 .col-girl{
@@ -305,12 +310,16 @@ transform: translate(-67vw,0);
   background: #cccccc;
 }
 
+
 #banner{
-  margin-top: 10%;
+  margin-top: 0%;
 }
+
+
 
 #banner_img{
   max-width: 100%;
+ top: 0%;
 }
 
 
