--- a/css/css.css
+++ b/css/css.css
@@ -67,12 +67,12 @@ li:hover{
 }
 
 header{
-  background-color: rgba(246,246,246,.95);
+  background-color: rgba(246,246,246,.98);
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
 	position: fixed;
-	border: 1px solid #cccccc;
+	border-bottom: 1px solid #cccccc;
   z-index: 100;
   
   align-items: center;
@@ -80,7 +80,7 @@ header{
 
   height: 10%;
 
-  transition: transform 0.5s ease;
+  transition: transform 0.5s ease-in;
 
 }
 
@@ -92,7 +92,7 @@ nav{
 		position:fixed;
 		right: -67vw;
     
-		transition: transform 0.5s ease;
+		transition: transform 0.5s ease-in;
 		
 		background-color: #ececec;
 
@@ -103,7 +103,7 @@ nav{
 #content{
   position: absolute;
   top: 10%;
-  transition: transform 0.5s ease;
+  transition: transform 0.5s ease-in;
   background-color: #f6f6f6;
 }
 
@@ -230,10 +230,10 @@ transform: translate(-67vw,0);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  -webkit-transition: .25s ease-in;
+  -moz-transition: .25s ease-in;
+  -o-transition: .25s ease-in;
+  transition: .25s ease-in;
   cursor: pointer;
 }
 
@@ -250,10 +250,10 @@ transform: translate(-67vw,0);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+  -webkit-transition: .25s ease-in;
+  -moz-transition: .25s ease-in;
+  -o-transition: .25s ease-in;
+  transition: .25s ease-in;
 }
 
 
