--- a/css/css.css
+++ b/css/css.css
@@ -80,7 +80,7 @@ header{
 
   height: 10%;
 
-  transition: transform 0.5s ease-in;
+  transition: transform 0.5s ease;
 
 }
 
@@ -92,7 +92,7 @@ nav{
 		position:fixed;
 		right: -67vw;
     
-		transition: transform 0.5s ease-in;
+		transition: transform 0.5s ease;
 		
 		background-color: #ececec;
 
@@ -103,7 +103,7 @@ nav{
 #content{
   position: absolute;
   top: 10%;
-  transition: transform 0.5s ease-in;
+  transition: transform 0.5s ease;
   background-color: #f6f6f6;
 }
 
@@ -230,10 +230,10 @@ transform: translate(-67vw,0);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in;
-  -moz-transition: .25s ease-in;
-  -o-transition: .25s ease-in;
-  transition: .25s ease-in;
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
   cursor: pointer;
 }
 
@@ -250,10 +250,10 @@ transform: translate(-67vw,0);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
-  -webkit-transition: .25s ease-in;
-  -moz-transition: .25s ease-in;
-  -o-transition: .25s ease-in;
-  transition: .25s ease-in;
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
 
