--- a/css/css.css
+++ b/css/css.css
@@ -82,6 +82,10 @@ header{
 
   transition: transform 0.5s ease;
 
+  -webkit-box-shadow: 0 8px 8px -8px #cccccc;
+     -moz-box-shadow: 0 8px 8px -8px #cccccc;
+          box-shadow: 0 8px 8px -8px #cccccc;
+
 }
 
 
