--- a/css/css.css
+++ b/css/css.css
@@ -82,12 +82,17 @@ header{
 
   transition: transform 0.5s ease;
 
+  
+
   -webkit-box-shadow: 0 1px 6px  #cccccc;
      -moz-box-shadow: 0 1px 6px  #cccccc;
           box-shadow: 0 1px 6px  #cccccc;
 
 }
 
+.header-up{
+  transform: translate(0,-11vh);
+}
 
 nav{
 
