--- a/css/css.css
+++ b/css/css.css
@@ -13,12 +13,12 @@ html, body, main{
 	width: 100%;
 	background-color: #f6f6f6;
   font-family: 'Open Sans', serif;
-  overflow-x:hidden;
+ /* overflow-x:hidden;*/
 }
 
 body{
   position: relative;
-  
+
 }
 
 
