--- a/css/css.css
+++ b/css/css.css
@@ -98,7 +98,21 @@ header{
 .header-up{
   transform: translate(0,-11vh);
 }
+#banner-header{
 
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  position: relative;
+  top: 0;
+  z-index: 100;
+  
+  align-items: center;
+  justify-content: space-around;
+
+  height: 10%;
+
+}
 nav{
 
 		width: 67vw;
