--- a/css/css.css
+++ b/css/css.css
@@ -239,10 +239,10 @@ transform: translate(-67vw,0);
 	 border: 0px solid red;
 }
 
-#menu_icon{
+.menu_icon{
 	float: right;
 }
-#menu_icon:hover{
+.menu_icon:hover{
 	cursor: pointer;
 }
 
@@ -250,7 +250,7 @@ transform: translate(-67vw,0);
 
 /* Icon 1 */
 
- #menu_icon {
+ .menu_icon {
   width: 25px;
   height: 19px;
   position: relative;
@@ -266,7 +266,7 @@ transform: translate(-67vw,0);
   cursor: pointer;
 }
 
- #menu_icon span {
+ .menu_icon span {
   display: block;
   position: absolute;
   height: 3px;
@@ -290,7 +290,7 @@ transform: translate(-67vw,0);
 /* Icon 4 */
 
 
-#menu_icon span:nth-child(1) {
+.menu_icon span:nth-child(1) {
   top: 0px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
@@ -298,7 +298,7 @@ transform: translate(-67vw,0);
   transform-origin: left center;
 }
 
-#menu_icon span:nth-child(2) {
+.menu_icon span:nth-child(2) {
   top: 8px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
@@ -306,7 +306,7 @@ transform: translate(-67vw,0);
   transform-origin: left center;
 }
 
-#menu_icon span:nth-child(3) {
+.menu_icon span:nth-child(3) {
   top: 16px;
   -webkit-transform-origin: left center;
   -moz-transform-origin: left center;
@@ -314,7 +314,7 @@ transform: translate(-67vw,0);
   transform-origin: left center;
 }
 
-#menu_icon.open span:nth-child(1) {
+.menu_icon.open span:nth-child(1) {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -o-transform: rotate(45deg);
@@ -324,12 +324,12 @@ transform: translate(-67vw,0);
   background: #cccccc;
 }
 
-#menu_icon.open span:nth-child(2) {
+.menu_icon.open span:nth-child(2) {
   width: 0%;
   opacity: 0;
 }
 
-#menu_icon.open span:nth-child(3) {
+.menu_icon.open span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
   -moz-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
@@ -339,9 +339,13 @@ transform: translate(-67vw,0);
   background: #cccccc;
 }
 
-
+#banner-outbox{
+  margin-top: 0%;
+  position: relative;
+}
 #banner{
   margin-top: 0%;
+
 }
 
 
