--- a/css/css.css
+++ b/css/css.css
@@ -104,14 +104,15 @@ header{
   flex-wrap: wrap;
   width: 100%;
   position: absolute;
-  top: 0;
+  top:1%;
   z-index: 100;
   
   align-items: center;
   justify-content: space-around;
 
-  height: 10%;
+  
 
+ border: 0px solid red;
 }
 nav{
 
@@ -341,7 +342,7 @@ transform: translate(-67vw,0);
 
 #banner{
   margin-top: 0%;
-  position: absolute;
+  
 }
 
 
