--- a/css/css.css
+++ b/css/css.css
@@ -35,13 +35,16 @@ ul{
 	padding: 0px;
 	margin: 0px;
 	background-color: #ececec;
+  background-color: #f6f6f6;
+border: 0px solid red;
+
 }
 li{
 	color: #333333;
 	font-size: 17px;
 	margin:0px;
 	padding-left: 10vw;
-	border-bottom: 1px solid #fefefe;
+	border-bottom: 0px solid #fefefe;
 	text-align: left;
   height: 10vh;
 
@@ -114,7 +117,7 @@ nav{
     
 		transition: transform 0.5s ease;
 		
-		background-color: #ececec;
+		background-color: #f6f6f6;
 
 
 	}
@@ -314,7 +317,7 @@ transform: translate(-67vw,0);
   transform: rotate(45deg);
   top: 0px;
   left: 2px;
-  background: #ececec;
+  background: #e1e1e1;
 }
 
 #menu_icon.open span:nth-child(2) {
@@ -329,7 +332,7 @@ transform: translate(-67vw,0);
   transform: rotate(-45deg);
   top: 17.5px;
   left: 2px;
-  background: #ececec;
+  background: #e1e1e1;
 }
 
 
@@ -338,7 +341,7 @@ transform: translate(-67vw,0);
 }
 
 
-#gray{
+#img-gray-layer{
   position: absolute;
   top:0px;
   left: 0px;
@@ -396,7 +399,16 @@ font-weight: bold;
 }
 
 
-
+#main-gray-layer{
+  position: fixed;
+  left:0px;
+  width: 100%;
+  height : 0%;
+  background-color: rgba(0,0,0,.45);
+  z-index: 10000;
+  border: 0px solid red;
+  transition: transform .5s ease;
+}
 
 @media screen and (min-width:600px){
 
