--- a/css/css.css
+++ b/css/css.css
@@ -13,7 +13,7 @@ html, body, main{
 	width: 100%;
 	background-color: #f6f6f6;
   font-family: 'Open Sans', serif;
- /* overflow-x:hidden;*/
+ overflow-y:hidden;
 }
 
 body{
