--- a/css/css.css
+++ b/css/css.css
@@ -337,7 +337,7 @@ transform: translate(-67vw,0);
 
 
 #banner{
-  margin-top: 0%;
+ position: relative;
 }
 
 
@@ -363,9 +363,9 @@ transform: translate(-67vw,0);
   position: absolute;
   top:0px;
   left: 0px;
-  
+  border: 2px solid red;
 width: 100%;
-  
+height: 100%;
 
   display: flex;
 }
