--- a/css/css.css
+++ b/css/css.css
@@ -339,6 +339,10 @@ transform: translate(-67vw,0);
 
 #banner{
  position: relative;
+ background:url("../img/isabella-gray-narrow.jpg") fixed no-repeat;
+    background-size: contain;
+    width: 100%;
+    height: 500px;
 }
 
 
@@ -386,9 +390,9 @@ font-weight: bold;
 }
 
 #banner_img{
-
-  max-width: 100%;
- top: 0%;
+visibility: hidden;
+max-width: 100%;
+top: 0%;
 }
 
 
