--- a/css/css.css
+++ b/css/css.css
@@ -340,7 +340,7 @@ transform: translate(-67vw,0);
 #banner{
  position: relative;
  background:url("../img/isabella-gray.jpg") fixed no-repeat;
-    background-size: contain;
+    background-size: cover;
     width: 100%;
     
     border: 0px solid red;
@@ -424,7 +424,7 @@ top: 0%;
  #banner{
  position: relative;
  background:url("../img/isabella-gray-narrow.jpg") fixed no-repeat;
-    background-size: contain;
+    background-size: cover;
     width: 100%;
     border: 0px solid red;
 }
