--- a/css/css.css
+++ b/css/css.css
@@ -1,3 +1,10 @@
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+
+
 *{
 	 -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
@@ -419,7 +426,7 @@ top: 0%;
   border: 0px solid red;
   transition: transform .5s ease;
 }
-
+}
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
