--- a/css/css.css
+++ b/css/css.css
@@ -481,7 +481,7 @@ h6{
   font-weight: bold;
 }
 
-    
+
 }
 @media screen 
   and (min-device-width: 1200px) 
@@ -499,18 +499,18 @@ h6{
     }
     #banner-text{
       float: right;
-      margin-right: 10vw;
+      margin-right: 0px;
       border: 0px solid red;
     }
     h3{
       color: #fefefe;
       margin: ;
-      font-size: 35px;
+      font-size: 10px;
     }
     h6{
       text-align: center;
       color: #ececec;
       font-weight: bold;
-      font-size: 20px;
+      font-size: 5px;
     }
 }
