--- a/css/css.css
+++ b/css/css.css
@@ -344,8 +344,7 @@ transform: translate(-67vw,0);
  position: relative;
  background:url("../img/isabella-gray.jpg") fixed no-repeat;
     background-size: contain;
-    width: 100%;
-    
+    background-size: 100% auto;
     border: 0px solid red;
 }
 
@@ -494,6 +493,7 @@ h6{
         position: relative;
         background:url("../img/isabella-gray-narrow.jpg") fixed no-repeat;
         background-size: contain;
+        background-size: 100% auto;
         width: 100%;
         border: 1px solid red;
     }
