--- a/css/css.css
+++ b/css/css.css
@@ -419,7 +419,10 @@ h6{
   and (max-device-width: 480px)
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: portrait) {
-
+#banner-text{
+  margin-right: 0px;
+  float: right;
+}
 
 h3{
   color: #fefefe;
