--- a/css/css.css
+++ b/css/css.css
@@ -445,6 +445,7 @@ h6{
       color: #fefefe;
       margin: ;
       font-size: 10px;
+      letter-spacing: 1px;
     }
     h6{
       text-align: center;
