--- a/css/css.css
+++ b/css/css.css
@@ -422,6 +422,11 @@ h6{
 }
 
 }
+
+#camera{
+  display: inline-block;
+  width: 30px;
+}
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
@@ -446,7 +451,7 @@ h6{
   font-size: 1px;
 }
 .girl_img{
-  display: none;
+  width: 13px;
 }
 #menu_icon{
   display: none;
