--- a/css/css.css
+++ b/css/css.css
@@ -399,7 +399,27 @@ h6{
   border: 0px solid red;
   transition: transform .5s ease;
 }
+#latest{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  
+  top:0px;
 
+  align-items: center;
+  justify-content: space-around;
+
+  border: 1px solid red;
+}
+#latest-textbox{
+
+  top:0px;
+  left: 0px;
+  border: 1px solid blue;
+width: 100%;
+height: 100%;
+  display: flex;
+}
 @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 480px)
