--- a/css/css.css
+++ b/css/css.css
@@ -418,7 +418,7 @@ text-align: center;
   border: 1px solid blue;
 width: 100%;
 height: 100%;
-  display: flex;
+  
 }
 #camera{
   margin: auto;
@@ -450,6 +450,7 @@ h6{
   display: inline-block;
   width: 30px;
 }
+
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
@@ -520,6 +521,16 @@ display: flex;
  border: 0px solid red;
 }
 
+h4{
+  letter-spacing: 
+}
+
+
+#camera{
+  
+}
+
+
 }
 
 
@@ -532,4 +543,3 @@ display: flex;
 
 
 
-}
