--- a/css/css.css
+++ b/css/css.css
@@ -416,7 +416,7 @@ text-align: center;
   top:0px;
   left: 0px;
   border: 0px solid blue;
-width: 60%;
+width: 50%;
 height: 100%;
 margin: auto;
   
@@ -455,7 +455,8 @@ h6{
   margin-top: 30px;
 }
 p{
-  font-size: 8px;
+  font-size:12px;
+  color:gray;
 }
 @media screen 
   and (min-device-width: 1200px) 
