--- a/css/css.css
+++ b/css/css.css
@@ -424,6 +424,10 @@ margin: auto;
 #camera{
   margin: auto;
 }
+h4{
+  font-size: 17px;
+  letter-spacing: 1px;
+}
 @media only screen 
   and (min-device-width: 320px) 
   and (max-device-width: 480px)
