--- a/css/css.css
+++ b/css/css.css
@@ -416,7 +416,7 @@ text-align: center;
   top:0px;
   left: 0px;
   border: 0px solid blue;
-width: 50%;
+width: 40%;
 height: 100%;
 margin: auto;
   
@@ -427,6 +427,11 @@ margin: auto;
 h4{
   font-size: 17px;
   letter-spacing: 1px;
+}
+p{
+  font-size:12px;
+  color:gray;
+  text-align: left;
 }
 @media only screen 
   and (min-device-width: 320px) 
@@ -458,10 +463,7 @@ h6{
 #latest{
   margin-top: 30px;
 }
-p{
-  font-size:12px;
-  color:gray;
-}
+
 @media screen 
   and (min-device-width: 1200px) 
   and (max-device-width: 1600px) 
