--- a/css/css.css
+++ b/css/css.css
@@ -41,8 +41,7 @@ ul{
 	background-color: #ececec;
   background-color: #f6f6f6;
 border: 0px solid red;
-display: flex;
-  flex-wrap: wrap;
+
 
 }
 li{
@@ -500,7 +499,7 @@ h6{
 .h-menu{
   float: right;
   margin-right: 5px;
-  border: 1px solid blue;
+  border: 0px solid blue;
 }
 header{
   padding: 0px;
@@ -517,7 +516,10 @@ header{
   margin-right: 5px;
   height: 0vh;
   text-align: center;
-  border: 1px solid red;
+  border: 0px solid red;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .horizontal:hover{
@@ -534,7 +536,7 @@ ul{
 border: 0px solid red;
 display: flex;
   flex-wrap: wrap;
- border: 1px solid red;
+ border: 0px solid red;
 }
 
 h4{
