--- a/css/css.css
+++ b/css/css.css
@@ -506,6 +506,7 @@ header{
   border: 0px solid blue;
   align-items:;
   justify-content:;
+  border-bottom: 0px solid #cccccc;
 }
 .horizontal{
   display: inline;
