dffdas Please enter the commit message for your changes. Lines starting

--- a/css/css.css
+++ b/css/css.css
@@ -506,7 +506,11 @@ header{
   border: 0px solid blue;
   align-items:;
   justify-content:;
+  
+}
+.fixed{
   border-bottom: 0px solid #cccccc;
+
 }
 .horizontal{
   display: inline;
