--- a/css/css.css
+++ b/css/css.css
@@ -46,7 +46,7 @@ border: 0px solid red;
 }
 li{
 	color: #333333;
-	font-size: 17px;
+	font-size: 1.17em;
 	margin:0px;
 	padding-left: 10vw;
 	border-bottom: 0px solid #fefefe;
@@ -421,11 +421,11 @@ margin: auto;
   margin: auto;
 }
 h4{
-  font-size: 17px;
+  font-size: 1em;
   letter-spacing: 1px;
 }
 p{
-  font-size:12px;
+  font-size: 16px;
   color:gray;
   text-align: left;
 }
